--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,7 +3,7 @@
     display: flex;
     width: 100%;
     height: 130px;
-    border-bottom: 1px solid black;
+    /* border-bottom: 1px solid black; */
     align-items: center;
     justify-content: space-between;
     /* padding: 0px 80px; */
