--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -16,6 +16,14 @@
     text-align: center;
 }
 
+.nav {
+    justify-content: flex-end;
+    flex: 1;
+    display: flex;
+    align-items: center;
+}
+
 .nav span{
+    
     padding-left: 60px;
 }
