--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,48 +1,150 @@
 .about_project {
-    color: white;
-    
-    background-color: rgb(32, 32, 32);
+    /* color: white; */
+    max-width: 1600px;
+    margin: auto;
+    background-color: #f7f8fc;
     padding: 50px 100px 60px 90px;
 }
-
-.about_project h2 {
-    font-size: 68px;
+body {
+    background-color: #f7f8fc;
 }
 
-.about_project_sections {
+.about_project__title {
+    font-size: 55px;
+    width: 100%;
+    text-align: center;
+    letter-spacing: 1px;
+}
+
+.about_project__subtitle {
+    color: rgb(78, 78, 78);
+    width: 100%;
+    padding: 0px 30px;
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+.about_project__tabs_container {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.about_project__tabs_container__header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    margin-bottom: 35px;
+
+}
+
+.about_project__tabs_container__header__section {
+    width: 100%;
+    height: 80px;
+    background-color: #f8f9fd;
+    /* border: 1px solid black; */
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 0px 5px 0px rgb(206, 206, 206);
+    cursor: pointer;
+}
+
+.section_active {
+    box-shadow: unset;
+    outline: 2px solid #1ad079;
+    border: 1px solid #1ad079;
+    background-color: white;
+}
+
+.about_project__tabs_container__section {
+    width: 100%;
+    height: 480px;
+    display: flex;
+    /* border: 1px solid black; */
+    /* background-color: white; */
+}
+
+.about_project__tabs_container__section_left {
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px 0px rgb(206, 206, 206);
+    background-color: white;
+    flex: 1;
+    height: 100%;
+    padding: 25px 30px;
+    display: flex;
+    flex-direction: column;
+}
+
+.section_title {
+    font-size: 26px;
+    margin-bottom: 10px;
+}
+
+.section_description {
+    line-height: 1.9em;
+    /* text-align: justify */
+}
+
+.section_objetivos {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 20px;
+}
+
+.section_objetivos_item {
+    margin: 8px 0px;
+}
+
+.section_objetivos_item svg {
+    color: #1ad079;
+}
+
+.about_project__tabs_container__section_right {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 100%;
+}
+
+.about_project__tabs_container__section_right img {
+    width: 50%;
+}
+
+.separator {
+    flex: 1;
+}
+
+.button_next_section {
+    outline: 2px solid #1ad079;
+    border-radius: 15px;
+    height: 50px;
+    display: flex;
+    /* justify-content: center; */
+    align-items: center;
+    width: 210px;
+    /* justify-content: ; */
+}
+
+.button_next_section__text {
+    background-color: #1ad079;
+    height: 100%;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0px 15px;
+}
+
+.button_next_section__icon {
     flex: 1;
     display: flex;
     justify-content: center;
-    padding: 80px 0;
-    /* align-items: center; */
-}
-
-.about_project_sections_left {
-    /* display: flex; */
-    flex: 1;
-    /* padding: 0px 50px; */
-}
-
-.about_project_sections_left img {
-    width: 80%;
-    border-radius: 10px;
-}
-
-.about_project_sections_right {
-    color: #202020;
-    display: flex;
-    flex-direction: column;
-    background-color: beige;
-    width: 35vw;
-    border-radius: 10px;
-    padding: 50px;
-    font-size: 22px;
-    line-height: 2em;
-    /* height: 100%; */
-    
-}
-
-.about_project_sections_right p:first-of-type{
-    margin-bottom: 30px;
-
+    align-items: center;
+    padding-right: 5px;
 }
