--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,5 +1,5 @@
 .home {
-    background-color: beige;
+    /* background-color: beige; */
 }
 
 .home_content {
@@ -22,7 +22,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: beige;
+    /* background-color: beige; */
     max-width: 60vw;
     padding-bottom: 130px;
 }
