--- a/src/components/Modelos3D_carrusel/Modelos_Carrusel.css
+++ b/src/components/Modelos3D_carrusel/Modelos_Carrusel.css
@@ -19,3 +19,14 @@
     width: 100%;
     text-align: center;
 }
+
+.modelos3d_content {
+    max-width: 1430px;
+    /* padding: 50px 100px 60px 90px; */
+    margin: auto;
+    margin-top: 40px;
+    padding: 0 80px;
+    border-radius: 15px;
+    background-color: white;
+    box-shadow: 0px 0px 5px 0px rgb(206, 206, 206);
+}
