ViveExperiencia section, repair dynamic imports for building app with vite

--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -1,7 +1,7 @@
 .aboutus {
-    color: white;
+    /* color: white;
     
-    background-color: rgb(32, 32, 32);
+    background-color: rgb(32, 32, 32); */
     padding: 50px 100px 60px 90px;
 }
 
