--- a/src/components/ViveLaExperiencia/VIveExperiencia.css
+++ b/src/components/ViveLaExperiencia/VIveExperiencia.css
@@ -1,4 +1,64 @@
 .vive_experiencia {
-    background-color: rgb(32, 32, 32);
-    color: white;
+    max-width: 1500px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    /* border: 1px solid black; */
+}
+
+.vive_experiencia__titulo {
+    font-size: 55px;
+    width: 100%;
+    text-align: center;
+    letter-spacing: 1px;
+}
+
+.vive_experiencia__subtitulo {
+    width: 80%;
+    margin: 20px 0;
+    margin-bottom: 50px;
+    text-align: center;
+}
+
+.vive_experiencia__bento_container {
+    flex: 1;
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    /* border: 1px solid black; */
+}
+
+.bento_item {
+    transition: 0.2s;
+    width: 410px;
+    height: 500px;
+    background-color: white;
+    border-radius: 15px;
+    box-shadow: 0px 0px 5px 0px rgb(206, 206, 206);
+}
+
+.bento_item_left{
+    top: 30%;
+    left: 0%;
+}
+
+.bento_item_middle{
+    top: 50%;
+    left: 50%;
+}
+
+.bento_item_right{
+    top: 100%;
+    left: 100%;
+}
+
+.bento_active {
+    position: fixed;
+    width: 80vw;
+    height: 80vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
