--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -1,10 +1,161 @@
-.aboutus {
-    /* color: white;
-    
-    background-color: rgb(32, 32, 32); */
-    padding: 50px 100px 60px 90px;
+.aboutUs_section {
+    align-items: center;
 }
 
-.aboutus h2 {
-    font-size: 68px;
+.aboutUs_title {
+    font-size: 55px;
+}
+
+.aboutUs_subtitle {
+    max-width: 1200px;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
+.aboutUs_container {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+    gap: 50px 70px;
+    width: 100%;
+    height: 100%;
+    max-width: 1300px;
+}
+
+.aboutUs_item {
+    width: 100%;
+    height: 200px;
+    /* border: 1px solid black; */
+    border-radius: 25px;
+    box-shadow: 0px 0px 5px 0px rgb(206, 206, 206);
+    background-color: white;
+
+}
+
+.container {
+    width: 100%;
+    max-width: 1300px;
+    height: 340px;
+    display: flex;
+    gap: 10px;
+    margin-inline: 50px;
+}
+
+.card {
+    min-width: 70px;
+    height: 100%;
+    border-radius: 30px;
+    overflow: hidden;
+
+    display: flex;
+    align-items: flex-end;
+    flex-grow: 1;
+    cursor: pointer;
+    position: relative;
+    transition: flex-grow 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+
+    --transition-timing: 0.35s;
+}
+
+.card img {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
+.card:hover {
+    flex-grow: 7;
+}
+
+.card>.background {
+    position: absolute;
+    inset: 0;
+    object-fit: cover;
+    object-position: center;
+    filter: brightness(0.4);
+    z-index: -1;
+    transition: var(--transition-timing) ease;
+}
+
+.card:hover>.background {
+    filter: brightness(1);
+}
+
+.card>.card-content {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    left: 10px;
+    right: 10px;
+    bottom: 20px;
+    overflow: hidden;
+    transition: var(--transition-timing);
+    z-index: 10;
+    background-color: green;
+}
+
+.card:hover>.card-content {
+    inset: 20px;
+    top: auto;
+}
+
+.card-content>* {
+    transition: var(--transition-timing);
+}
+
+.card-content>.profile-image {
+    min-width: 50px;
+    max-width: 50px;
+    height: 50px;
+    border: 1px solid white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    overflow: hidden;
+}
+
+.card:hover .profile-image {
+    border: 1px solid rgb(110, 252, 205);
+}
+
+.profile-image>svg {
+    stroke: #fefefe;
+}
+
+.card:hover .profile-image>svg {
+    stroke: rgb(110, 252, 205);
+}
+
+.card-content>.title {
+    white-space: pre;
+    margin-left: 10px;
+    translate: 0 100%;
+    opacity: 0;
+
+}
+
+.card:hover .title {
+    opacity: 1;
+    translate: 0 0;
+}
+
+.card>.backdrop {
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    height: 100px;
+    z-index: 0;
+    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.7));
+}
+
+.active {
+    flex-grow: 7;
+}
+
+.card:hover .background {
+    object-fit: contain;
+
 }
