--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -69,7 +69,7 @@ body {
 
 .about_project__tabs_container__section {
     width: 100%;
-    height: 480px;
+    /* height: 480px; */
     display: flex;
     /* border: 1px solid black; */
     /* background-color: white; */
