--- a/src/components/Modelos3D_carousel_2/modelos3d_carousel.css
+++ b/src/components/Modelos3D_carousel_2/modelos3d_carousel.css
@@ -10,51 +10,37 @@
 .carousel {
     width: 100%;
     max-width: 1300px;
-    /* Width of carousel */
-    height: 166px;
-    /* Height of carousel */
+    display: flex;
+    align-items: center;
+    /* height: 166px; */
 }
 
 .card_mod-container {
     width: 100%;
-    /* Width of card container */
     display: flex;
-    /* Set inline elements */
     overflow-x: auto;
-    /* Set overflow in horizontal scroll */
     overflow-y: hidden;
-    /* Hidden overflow in vertical scroll */
     scroll-snap-type: x mandatory;
-    /* Force the scroll to snap to the start of a scroll-snap area */
     gap: 8px;
-    /* Set gap between cards */
     width: calc(100% - 16px);
     margin: 8px;
     flex: 0 0 calc(100% - 16px);
-    /* Set width of card container */
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
 }
 
 .card_mod-container::-webkit-scrollbar {
-    display: none;
-    /* Hide scrollbar in Chrome, Safari and Opera */
+    width: 0px;
+    background: transparent;
 }
 
 .card_mod {
     min-width: 100%;
-    /* min-width: 250px; */
-    /* Set min width of card */
-    /* height: 150px; */
-    /* Set height of card */
     scroll-snap-align: start;
-    /* Set the element focus position in scroll container */
-    /* display: flex; */
-    /* justify-content: center; */
-    /* align-items: center; */
-    /* background: #17BF60;
-    border: 1px solid #4F5873;
-    color: #4a544c;
-    border-radius: 8px; */
-
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(2, 1fr);
@@ -65,14 +51,12 @@
 
 .card:hover {
     background: #1ED96F;
-    /* Set background color when hover */
 }
 
 .item_container {
     width: 100%;
     height: 100%;
     min-height: 300px;
-    /* border: 1px solid black; */
     border-radius: 15px;
     box-shadow: 0px 0px 5px 0px rgb(206, 206, 206);
     background-color: white;
@@ -84,7 +68,7 @@
 
 .item_container:hover {
     box-shadow: 0px 0px 5px 0px rgb(146, 143, 143);
-    
+
 }
 
 .item_container .item_container__img {
@@ -103,4 +87,34 @@
     text-align: center;
     font-size: 22px;
     font-weight: 600;
+}
+
+.active_drag {
+    scroll-snap-type: none;
+    cursor: grab;
+}
+
+.siguiente, .anterior {
+    font-size: 33px;
+}
+
+.scrollbar_custom {
+    width: 50%;
+    max-width: 500px;
+    height: 12px;
+    outline: 1px solid #54b4aa6c;
+    background-color: white;
+    border-radius: 50px;
+    box-shadow: 0px 0px 1px 0px rgb(168, 168, 168);
+    position: relative;
+}
+
+.scrollbar_custom_progress {
+    position: absolute;
+    height: 12px;
+    width: 100px;
+    border-radius: 50px;
+    background-color: #54b4aa;
+    transition: 0.5s;
+    position: absolute;
 }
