--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,16 +1,55 @@
 .header {
+    padding: 0px 60px;
     display: flex;
     width: 100%;
     height: 130px;
     align-items: center;
     justify-content: space-between;
+    transition: height 0.1s ease-in;
+    transition: height 0.1s ease-out;
 }
 
-.header > span {
+.logo_container {
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.burger_menu {
+    display: none;
+    position: absolute;
+    right: -30px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 30px;
+    cursor: pointer;
+    /* transition: 1s; */
+    box-sizing: content-box;
+    padding: 10px;
+}
+
+.burger_menu.burger_menu:hover {
+    transform-origin: 50% 25%;
+    transform: rotate(-180deg);
+    transition: transform 150ms ease;
+}
+
+.burger_menu.burger_menu:not( :hover) {
+    transform-origin: 50% 25%;
+    transform: rotate(180deg);
+    transition: transform 150ms ease;
+}
+
+.logo {
     border: 1px solid black;
     height: 80px;
     width: 80px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 500px;
 }
 
 .nav {
@@ -28,12 +67,97 @@
 }
 
 .line {
-    border-bottom: 1px solid transparent;
+    border-bottom: 2px solid transparent;
     width: 0px;
     transition: 0.1s;
 }
 
-.nav_item_container:hover .line{
+.nav_item_container:hover .line {
     width: 100%;
     border-bottom: 2px solid #1ad079;
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 1200px) {
+    .header {
+        flex-direction: column;
+        margin: 40px 0px;
+        height: 160px;
+        gap: 25px;
+    }
+}
+
+@media (max-width: 900px) {
+    .burger_menu {
+        display: unset;
+    }
+    .header {
+        z-index: 99;
+        position: fixed;
+        padding-top: 40px;
+        margin: 0;
+        /* background-color: #1ad079; */
+        flex-direction: column;
+        height: 140px;
+
+        /* margin: 0; */
+        /* margin: 40px 0px; */
+    }
+
+    .nav {
+        flex-direction: column;
+        justify-content: flex-start;
+        align-content: center;
+        width: 80%;
+        /* background-color: antiquewhite; */
+        padding-top: 40px;
+        gap: 30px;
+        /* transition: 1s; */
+        height: 0px;
+        /* transition: height 0.25s ease-in; */
+        transition: height 0.25s ease-out;
+        overflow: hidden;
+    }
+
+    .nav_item_container {
+        margin: 0;
+        font-size: 22px;
+        font-weight: 500;
+    }
+
+    .lang_selector {
+        margin: 0;
+    }
+
+    .nav_active {
+        /* display: none; */
+        height: 100%;
+        transition: 1s;
+        /* transition: height 0.25s ease-out; */
+        /* transition: height 0.25s ease-in; */
+    }
+
+    .header_active {
+        height: 100vh;
+        /* height: 140px; */
+
+    }
+}
+
+@media (max-width: 400px) {
+    .header {
+        /* padding: 0px 20px; */
+    }
+
+    .nav {
+        text-overflow: ellipsis;
+        text-wrap: nowrap;
+    }
+
+    .nav_item_container {
+        text-overflow: ellipsis;
+    }
+
+
 }
