--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,11 +7,11 @@
     justify-content: space-between;
     transition: height 0.1s ease-in;
     transition: height 0.1s ease-out;
+    background-color: #f7f8fc;
 }
 
 .logo_container {
     position: relative;
-    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -89,17 +89,23 @@
 }
 
 @media (max-width: 900px) {
+    .logo_container {
+        width: 100%;
+    }
+
     .burger_menu {
         display: unset;
     }
+
     .header {
         z-index: 99;
         position: fixed;
-        padding-top: 40px;
+        padding-top: 10px;
         margin: 0;
         /* background-color: #1ad079; */
         flex-direction: column;
-        height: 140px;
+        height: 100px;
+        box-shadow: 0px 0px 5px 0px rgb(140, 140, 140);
 
         /* margin: 0; */
         /* margin: 40px 0px; */
