--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -89,6 +89,12 @@
 }
 
 @media (max-width: 900px) {
+    .activeScrolling {
+        box-shadow: 0px 0px 5px 0px rgb(140, 140, 140);
+
+    }
+
+
     .logo_container {
         width: 100%;
     }
@@ -105,7 +111,6 @@
         /* background-color: #1ad079; */
         flex-direction: column;
         height: 100px;
-        box-shadow: 0px 0px 5px 0px rgb(140, 140, 140);
 
         /* margin: 0; */
         /* margin: 40px 0px; */
