--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -77,6 +77,7 @@ body {
 
 .about_project__tabs_container__section_left {
     border-radius: 15px;
+    /* box-shadow: 0 15px 40px #0000001a; */
     box-shadow: 0px 0px 5px 0px rgb(206, 206, 206);
     background-color: white;
     flex: 1;
