--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -94,6 +94,12 @@
 
     }
 
+    .isScrollingDown {
+        overflow: hidden;
+        height: 0px !important;
+        padding: 0 !important;
+    }
+
 
     .logo_container {
         width: 100%;
