--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -14,148 +14,206 @@
 }
 
 .aboutUs_container {
+    width: 100%;
+    /* background-color: rgba(0, 255, 255, 0.151); */
+    flex: 1;
+
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
     grid-template-columns: repeat(2, 1fr);
-    gap: 50px 70px;
-    width: 100%;
-    height: 100%;
-    max-width: 1300px;
+    grid-template-rows: repeat(3, 250px);
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
+    justify-content: center;
+    /* padding: 0px 50px; */
 }
 
-.aboutUs_item {
-    width: 100%;
-    height: 200px;
-    /* border: 1px solid black; */
-    border-radius: 25px;
-    box-shadow: 0px 0px 5px 0px rgb(206, 206, 206);
+.aboutUs_container_item {
     background-color: white;
-
-}
-
-.container {
     width: 100%;
-    max-width: 1300px;
-    height: 340px;
-    display: flex;
-    gap: 10px;
-    margin-inline: 50px;
-}
+    max-width: 600px;
+    min-width: 350px;
+    height: 250px;
+    border-radius: 25px;
+    box-shadow: 0 0px 10px #0000001a;
 
-.card {
-    min-width: 70px;
-    height: 100%;
-    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
     overflow: hidden;
-
-    display: flex;
-    align-items: flex-end;
-    flex-grow: 1;
-    cursor: pointer;
-    position: relative;
-    transition: flex-grow 0.5s cubic-bezier(0.16, 1, 0.3, 1);
-
-    --transition-timing: 0.35s;
 }
 
-.card img {
+.item_top {
+    /* background-color: blueviolet; */
     width: 100%;
-    height: 100%;
-    display: block;
+    height: 78%;
+    display: flex;
 }
 
-.card:hover {
-    flex-grow: 7;
+.item_bottom {
+    /* background-color: rgb(116, 116, 235); */
+    width: 100%;
+    height: 22%;
+    display: flex;
+    justify-content: space-around;
+    padding: 5px 10px 10px 10px;
+    gap: 10px;
 }
 
-.card>.background {
-    position: absolute;
-    inset: 0;
-    object-fit: cover;
-    object-position: center;
-    filter: brightness(0.4);
-    z-index: -1;
-    transition: var(--transition-timing) ease;
-}
-
-.card:hover>.background {
-    filter: brightness(1);
-}
-
-.card>.card-content {
+.social_item {
+    /* border: 1px solid black; */
+    box-shadow: 0px 0px 5px 0px rgb(226, 228, 231);
+    background-color: antiquewhite;
+    width: 100%;
+    max-width: 110px;
+    min-width: 60px;
+    border-radius: 15px;
+    color: white;
     display: flex;
     align-items: center;
-    position: absolute;
-    left: 10px;
-    right: 10px;
-    bottom: 20px;
-    overflow: hidden;
-    transition: var(--transition-timing);
-    z-index: 10;
-    background-color: green;
+    justify-content: center;
+    gap: 5px;
+    
 }
 
-.card:hover>.card-content {
-    inset: 20px;
-    top: auto;
-}
-
-.card-content>* {
-    transition: var(--transition-timing);
-}
-
-.card-content>.profile-image {
-    min-width: 50px;
-    max-width: 50px;
-    height: 50px;
-    border: 1px solid white;
+.item_top_img {
+    /* background-color: bisque; */
+    width: 30%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 50%;
+}
+
+.item_top_img img {
+    border-radius: 100%;
     overflow: hidden;
-}
-
-.card:hover .profile-image {
-    border: 1px solid rgb(110, 252, 205);
-}
-
-.profile-image>svg {
-    stroke: #fefefe;
-}
-
-.card:hover .profile-image>svg {
-    stroke: rgb(110, 252, 205);
-}
-
-.card-content>.title {
-    white-space: pre;
-    margin-left: 10px;
-    translate: 0 100%;
-    opacity: 0;
-
-}
-
-.card:hover .title {
-    opacity: 1;
-    translate: 0 0;
-}
-
-.card>.backdrop {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    height: 100px;
-    z-index: 0;
-    background: linear-gradient(to bottom, transparent, rgba(0, 0, 0, 0.7));
-}
-
-.active {
-    flex-grow: 7;
-}
-
-.card:hover .background {
+    width: 120px;
+    height: 120px;
     object-fit: contain;
+}
+
+.item_top_info {
+    width: 70%;
+    height: 100%;
+    /* background-color: coral; */
+    display: flex;
+    flex-direction: column;
+    padding: 20px 10px;
+}
+
+.info_nombre {
+    font-size: 22px;
+    font-weight: bold;
+}
+
+.info_nombre>span {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.info_titulacion {
+    margin: 5px 0 10px 0;
+    flex: 1;
+}
+
+.info_rol {
+    
+}
+
+.linkedin_bg {
+    background-color: #0077b7;
+}
+
+.github_bg {
+    background-color: #222222da;
+}
+
+.email_bg {
+    background-color: #D04848;
+}
+
+
+
+
+@media (max-width: 1200px) {
+    .aboutUs_container {
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(6, 250px);
+        align-items: center;
+        justify-items: center;
+        grid-row-gap: 15px;
+        /* padding: 0px 10px; */
+    }
+}
+
+@media (max-width: 600px) {
+
+    .aboutUs_section {
+        padding: 20px;
+    }
+
+    .aboutUs_title {
+        font-size: 32px;
+        text-align: center;
+    }
+
+    .aboutUs_subtitle {
+        max-width: 1200px;
+        text-align: center;
+        margin-top: 10px;
+        margin-bottom: 40px;
+    }
+
+
+
+
+    .item_top {
+        /* background-color: blueviolet; */
+        width: 100%;
+        height: 78%;
+        display: flex;
+    }
+
+    .item_bottom {
+        /* background-color: rgb(116, 116, 235); */
+        width: 100%;
+        height: 22%;
+    }
+
+    .item_top_img {
+        /* background-color: bisque; */
+        width: 25%;
+        height: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .item_top_img img {
+        border-radius: 100%;
+        overflow: hidden;
+        width: 70px;
+        height: 70px;
+        object-fit: contain;
+    }
+
+    .item_top_info {
+        width: 75%;
+        height: 100%;
+        /* background-color: coral; */
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    .info_nombre {
+        font-size: 20px;
+        font-weight: bold;
+    }
+
+    .info_nombre>span {
+        font-size: 16px;
+        font-weight: 500;
+    }
+
 
 }
