--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -74,7 +74,7 @@
     border-radius: 400px;
     padding: 20px 40px;
     color: rgb(255, 255, 255);
-    background-color: #ECCA9C;
+    background-color: bisque;
     /* font-weight: 700; */
     margin-top: 25px;
     font-size: 20px;
