--- a/src/components/AboutUs/AboutUs.css
+++ b/src/components/AboutUs/AboutUs.css
@@ -1,5 +1,6 @@
 .aboutUs_section {
     align-items: center;
+    padding: 0px 80px 50px 80px;
 }
 
 .aboutUs_title {
@@ -157,6 +158,10 @@
         justify-items: center;
         grid-row-gap: 15px;
         /* padding: 0px 10px; */
+    }
+
+    .aboutUs_container_item {
+        justify-self: center !important;
     }
 
     .aboutUs_container_informatica {
