--- a/src/components/Accesibilidad/Accesibilidad.css
+++ b/src/components/Accesibilidad/Accesibilidad.css
@@ -28,6 +28,7 @@
     display: flex;
     flex:1;
     align-self: center;
+    gap: 40px
 }
 
 .accesibilidad_container_left {
@@ -45,6 +46,14 @@
     justify-content: space-around;
     align-items: center;
     
+}
+
+.accesibilidad_container_titulo {
+
+    text-align: center;
+    font-size: 30px;
+    color: coral;
+    padding-bottom: 10px;
 }
 
 .accesibilidad_container_right {
