--- a/src/components/Modelos3D_carousel_2/modelos3d_carousel.css
+++ b/src/components/Modelos3D_carousel_2/modelos3d_carousel.css
@@ -95,7 +95,9 @@
 }
 
 .item_container .item_container__img img {
-    width: 35%;
+    width: 100%;
+    min-width: 150px;
+    max-width: 230px;
 }
 
 .item_container .card_mod__title {
