--- a/src/components/EnfoqueSAS/EnfoqueSAS.css
+++ b/src/components/EnfoqueSAS/EnfoqueSAS.css
@@ -30,7 +30,7 @@
 
 .enfoqueSAS__section {
     width: 100%;
-    height: 500px;
+    /* height: 500px; */
     border-radius: 30px;
     margin-bottom: 40px;
     display: flex;
@@ -59,8 +59,8 @@
 }
 
 .enfoqueSAS__section__img img {
-    /* width: 100%; */
-    height: 90%;
+    width: 100%;
+    /* height: 90%; */
     border-radius: 30px;
     overflow: hidden;
 }
@@ -101,4 +101,47 @@
     max-width: 90%;
     text-align: justify;
     /* text-justify: inter-word; */
+}
+
+@media (max-width: 1000px) {
+    .enfoqueSAS__section {
+        flex-direction: column;
+        align-items: center;
+        gap: 40px;
+    }
+
+    .enfoqueSAS__section__main {
+        width: 100%;
+        
+    }
+
+    .enfoqueSAS__section__img {
+        padding: unset;
+    }
+}
+
+@media (max-width: 550px) {
+    .enfoqueSAS {
+        padding: 0 30px;
+    }
+
+    .enfoqueSAS__titulo {
+        font-size: 32px;
+        letter-spacing: unset;
+    }
+
+    .enfoqueSAS__subtitulo {
+        font-size: 22px;
+        letter-spacing: unset;
+        margin-bottom: 10px;
+    }
+}
+
+@media (max-width: 450px) {
+    .enfoqueSAS {
+        margin-top: 30px;
+    }
+    .enfoqueSAS__section__main_title {
+        font-size: 24px;
+    }
 }
